--- a/Projects.html
+++ b/Projects.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIJJI JOVARDHAN</title>
-    <link rel="stylesheet" href="/css/projects.css">
+    <link rel="stylesheet" href="./css/projects.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="/img/profile.jpg" type="image/png">
+    <link rel="icon" href="./img/profile.jpg" type="image/png">
 
     </head>
     
@@ -15,7 +15,7 @@
     <h1 style="border-bottom: 2px solid #007bff;">PROJECTS</h1>
 
     <div class="project-section">
-        <img src="/img/IMG_20240901_160108.jpg" alt="Project" class="project-image">
+        <img src="./img/IMG_20240901_160108.jpg" alt="Project" class="project-image">
 
         <div class="project-content">
             <h3>AARUHI_BOT - Project Overview</h3>
@@ -46,7 +46,7 @@
 
     <div class="project-section">
         <video class="project-video" autoplay loop muted>
-            <source src="/img/InShot_20240901_160632971.mp4" type="video/mp4">
+            <source src="./img/InShot_20240901_160632971.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
@@ -61,23 +61,23 @@
     <div class="button-container">
         <button id="mainButton" class="button tooltip"><span style="font-size: 40px;">+</span>
         </button>
-        <button id="buttonA" class="button hidden tooltip"><a href="/index.html" style="font-size: 24px"><i class="fas fa-home"></i></a>
+        <button id="buttonA" class="button hidden tooltip"><a href="./index.html" style="font-size: 24px"><i class="fas fa-home"></i></a>
             <span class="tooltiptext">HOME</span>
         </button>
-        <button id="buttonB" class="button hidden tooltip"><a href="/achievements&certificates.html" style="font-size: 24px"><i class="fas fa-trophy"></i></a>
+        <button id="buttonB" class="button hidden tooltip"><a href="./achievements&certificates.html" style="font-size: 24px"><i class="fas fa-trophy"></i></a>
             <span class="tooltiptext">ACHIEVEMENTS</span>
         </button>
-        <button id="buttonC" class="button hidden tooltip"><a href="/resume.html" style="font-size: 24px"><i class="fas fa-file-alt"></i></a>
+        <button id="buttonC" class="button hidden tooltip"><a href="./resume.html" style="font-size: 24px"><i class="fas fa-file-alt"></i></a>
             <span class="tooltiptext">RESUME</span>
         </button>
         <button id="buttonD" class="button hidden tooltip"><a href="#" style="font-size: 24px"><i class="fas fa-briefcase"></i></a>
             <span class="tooltiptext">PROJECTS</span>
         </button>
-        <button id="buttonE" class="button hidden tooltip"><a href="/index.html#contact" style="font-size: 24px"><i class="fas fa-user"></i></a>
+        <button id="buttonE" class="button hidden tooltip"><a href="./index.html#contact" style="font-size: 24px"><i class="fas fa-user"></i></a>
             <span class="tooltiptext">CONTACT</span>
         </button>
     </div>
       </div>
-      <script src="/js/main.js"></script>
+      <script src="./js/main.js"></script>
     </body>
 </html>
