--- a/achievements&certificates.html
+++ b/achievements&certificates.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIJJI JOVARDHAN</title>
-    <link rel="stylesheet" href="/css/achievements.css">
+    <link rel="stylesheet" href="./css/achievements.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="./img/profile.jpg" type="image/png">
     </head>
     
     <body>
@@ -28,56 +29,63 @@
           <div class="certificates-container">
             <div class="scrollable-certificates" id="scrollable-certificates">
               <img
-                src="/img/certificates/Applying AI.png"
+                src="./img/certificates/Applying AI.png"
                 alt="Certification 1"
                 onclick="showImage(0)"
               />
               <img
-                src="/img/certificates/Building a Website.jpg"
+                src="./img/certificates/Building a Website.jpg"
                 alt="Certification 2"
                 onclick="showImage(1)"
               />
               <img
-                src="/img/certificates/ChatGPT.jpg"
+                src="./img/certificates/ChatGPT.jpg"
                 alt="Certification 3"
                 onclick="showImage(2)"
               />
               <img
-                src="/img/certificates/communication skills.png"
+                src="./img/certificates/communication skills.png"
                 alt="Certification 4"
                 onclick="showImage(3)"
               />
               <img
-                src="/img/certificates/crash course on soft skills for interviews.png"
+                src="./img/certificates/crash course on soft skills for interviews.png"
                 alt="Certification 5"
-                onclick="showImage(4)"
-              />  <img src="/img/certificates/CSS.jpg" style="border-radius: 0%;" alt="Certification 6"
-                onclick="showImage(5)"
->
-                  <img src="/img/certificates/Data Science Foundations.png" style="border-radius: 0%;" alt="Certification 7" onclick="showImage(6)"
->
-                  <img src="/img/certificates/Git.jpg" style="border-radius: 0%;" alt="Certification 8" onclick="showImage(7)"
->
-                  <img src="/img/certificates/html.jpg" style="border-radius: 0%;" alt="Certification 9"
+                onclick="showImage(4)"/>  
+              <img 
+              src="/img/certificates/CSS.jpg" 
+              alt="Certification 6" 
+              onclick="showImage(5)"
+              />
+              <img 
+              src="./img/certificates/Data Science Foundations.png"
+              alt="Certification 7" 
+              onclick="showImage(6)"/>
+              <img 
+              src="./img/certificates/Git.jpg" 
+              alt="Certification 8" 
+              onclick="showImage(7)"
+              />
+              <img src="./img/certificates/html.jpg" alt="Certification 9"
                  onclick="showImage(8)">
-                  <img src="/img/certificates/HTML Advanced.jpg" style="border-radius: 0%;" alt="Certification 10"               onclick="showImage(9)">
-                  <img src="/img/certificates/interest calculator using Html,Css & Js.png" style="border-radius: 0%;" alt="Certification 11" onclick="showImage(10)"
+                  <img src="./img/certificates/HTML Advanced.jpg" alt="Certification 10" onclick="showImage(9)">
+                  <img src="./img/certificates/interest calculator using Html,Css & Js.png" alt="Certification 11" onclick="showImage(10)"
 >
-                  <img src="/img/certificates/interrview skills.png" style="border-radius: 0%;" alt="Certification 12"                 onclick="showImage(11)"
+                  <img src="./img/certificates/interrview skills.png" alt="Certification 12" onclick="showImage(11)"
 >
-                  <img src="/img/certificates/introduction to r.png" style="border-radius: 0%;" alt="Certification 13"                 onclick="showImage(12)"
+                  <img src=".//img/certificates/introduction to r.png" alt="Certification 13" onclick="showImage(12)"
 >
-                  <img src="/img/certificates/introduction to soft skills.png" style="border-radius: 0%;" alt="Certification 14"                 onclick="showImage(13)"
+                  <img src="/img/certificates/introduction to soft skills.png" alt="Certification 14" onclick="showImage(13)"
 >
-                  <img src="/img/certificates/Java Servlets and JSP.jpg" style="border-radius: 0%;" alt="Certification 15"                 onclick="showImage(14)"
+                  <img src="/img/certificates/Java Servlets and JSP.jpg" alt="Certification 15" onclick="showImage(14)"
 >
-                  <img src="/img/certificates/Python 3.jpg" style="border-radius: 0%;" alt="Certification 16"                 onclick="showImage(15)"
+                  <img src="/img/certificates/Python 3.jpg" alt="Certification 16" onclick="showImage(15)"
 >
-                  <img src="/img/certificates/rdbms.jpg" style="border-radius: 0%;" alt="Certification 17"                 onclick="showImage(16)"
+                  <img src="/img/certificates/rdbms.jpg" alt="Certification 17" onclick="showImage(16)"
 >
-                  <img src="/img/certificates/Resume building.png" style="border-radius: 0%;" alt="Certification 18"                 onclick="showImage(17)"
+                  <img src="/img/certificates/Resume building.png" alt="Certification 18" onclick="showImage(17)"
 >
-                  <img src="/img/certificates/sql.jpg" style="border-radius: 0%;" alt="Certification 19"                 onclick="showImage(18)"
+                  <img src="/img/certificates/sql.jpg" alt="Certification 19" onclick="showImage(18)"
 >            
             </div>
             <div class="carousel">
@@ -101,21 +109,21 @@
               <img
                 src="/img/certificates/crash course on soft skills for interviews.png"
                 alt="Certification 5"
-              />  <img src="/img/certificates/CSS.jpg" style="border-radius: 0%;" alt="Certification 6">
-                  <img src="/img/certificates/Data Science Foundations.png" style="border-radius: 0%;" alt="Certification 7">
-                  <img src="/img/certificates/Git.jpg" style="border-radius: 0%;" alt="Certification 8">
-                  <img src="/img/certificates/html.jpg" style="border-radius: 0%;" alt="Certification 9">
-                  <img src="/img/certificates/HTML Advanced.jpg" style="border-radius: 0%;" alt="Certification 10">
-                  <img src="/img/certificates/interest calculator using Html,Css & Js.png" style="border-radius: 0%;" alt="Certification 11">
-                  <img src="/img/certificates/interrview skills.png" style="border-radius: 0%;" alt="Certification 12">
-                  <img src="/img/certificates/introduction to r.png" style="border-radius: 0%;" alt="Certification 13">
-                  <img src="/img/certificates/introduction to soft skills.png" style="border-radius: 0%;" alt="Certification 14">
-                  <img src="/img/certificates/Java Servlets and JSP.jpg" style="border-radius: 0%;" alt="Certification 15">
-                  <img src="/img/certificates/Python 3.jpg" style="border-radius: 0%;" alt="Certification 16">
-                  <img src="/img/certificates/rdbms.jpg" style="border-radius: 0%;" alt="Certification 17">
-                  <img src="/img/certificates/Resume building.png" style="border-radius: 0%;" alt="Certification 18">
-                  <img src="/img/certificates/sql.jpg" style="border-radius: 0%;" alt="Certification 19">        
-              <div class="text">Certification 1 Description</div>
+              />  <img src="/img/certificates/CSS.jpg" alt="Certification 6">
+                  <img src="/img/certificates/Data Science Foundations.png" alt="Certification 7">
+                  <img src="/img/certificates/Git.jpg" alt="Certification 8">
+                  <img src="/img/certificates/html.jpg" alt="Certification 9">
+                  <img src="/img/certificates/HTML Advanced.jpg" alt="Certification 10">
+                  <img src="/img/certificates/interest calculator using Html,Css & Js.png" alt="Certification 11">
+                  <img src="/img/certificates/interrview skills.png" alt="Certification 12">
+                  <img src="/img/certificates/introduction to r.png" alt="Certification 13">
+                  <img src="/img/certificates/introduction to soft skills.png" alt="Certification 14">
+                  <img src="/img/certificates/Java Servlets and JSP.jpg" alt="Certification 15">
+                  <img src="/img/certificates/Python 3.jpg" alt="Certification 16">
+                  <img src="/img/certificates/rdbms.jpg" alt="Certification 17">
+                  <img src="/img/certificates/Resume building.png" alt="Certification 18">
+                  <img src="/img/certificates/sql.jpg" alt="Certification 19">        
+              <div class="text"></div>
               <div class="carousel-buttons">
                 <button class="button1" onclick="prevImage()"><i class="fas fa-arrow-left"></i></button>
                 <button class="button1" onclick="nextImage()"><i class="fas fa-arrow-right"></i></button>
@@ -130,24 +138,24 @@
     <div class="button-container">
         <button id="mainButton" class="button tooltip"><span style="font-size: 40px;">+</span>
         </button>
-        <button id="buttonA" class="button hidden tooltip"><a href="/index.html" style="font-size: 24px"><i class="fas fa-home"></i></a>
+        <button id="buttonA" class="button hidden tooltip"><a href="./index.html" style="font-size: 24px"><i class="fas fa-home"></i></a>
             <span class="tooltiptext">HOME</span>
         </button>
         <button id="buttonB" class="button hidden tooltip"><a href="#" style="font-size: 24px"><i class="fas fa-trophy"></i></a>
             <span class="tooltiptext">ACHIEVEMENTS</span>
         </button>
-        <button id="buttonC" class="button hidden tooltip"><a href="/resume.html" style="font-size: 24px"><i class="fas fa-file-alt"></i></a>
+        <button id="buttonC" class="button hidden tooltip"><a href="./resume.html" style="font-size: 24px"><i class="fas fa-file-alt"></i></a>
             <span class="tooltiptext">RESUME</span>
         </button>
-        <button id="buttonD" class="button hidden tooltip"><a href="/Projects.html" style="font-size: 24px"><i class="fas fa-briefcase"></i></a>
+        <button id="buttonD" class="button hidden tooltip"><a href="./Projects.html" style="font-size: 24px"><i class="fas fa-briefcase"></i></a>
             <span class="tooltiptext">PROJECTS</span>
         </button>
-        <button id="buttonE" class="button hidden tooltip"><a href="/index.html#contact" style="font-size: 24px"><i class="fas fa-user"></i></a>
+        <button id="buttonE" class="button hidden tooltip"><a href="./index.html#contact" style="font-size: 24px"><i class="fas fa-user"></i></a>
             <span class="tooltiptext">CONTACT</span>
         </button>
     </div>
       </div>
-      <script src="/js/main.js"></script>
-      <script src="/js/achievements.js"></script>
+      <script src="./js/main.js"></script>
+      <script src="./js/achievements.js"></script>
     </body>
 </html>
