--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIJJI JOVARDHAN</title>
-    <link rel="stylesheet" href="/css/resume.css">
+    <link rel="stylesheet" href="./css/resume.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="/img/profile.jpg" type="image/png">
+    <link rel="icon" href="./img/profile.jpg" type="image/png">
 
     </head>
     
@@ -16,7 +16,7 @@
         <!-- Header Section -->
         <div class="header">
           <div style="display: grid;align-items: center;justify-content:center;">
-            <img src="/img/profile.jpg" alt="Your Image">          
+            <img src="./img/profile.jpg" alt="Your Image">          
             <h1 style="display:flex;">VIJJI JOVARDHAN</h1>
           </div>
             <div class="info">
@@ -99,23 +99,23 @@
     <div class="button-container">
         <button id="mainButton" class="button tooltip"><span style="font-size: 40px;">+</span>
         </button>
-        <button id="buttonA" class="button hidden tooltip"><a href="/index.html" style="font-size: 24px"><i class="fas fa-home"></i></a>
+        <button id="buttonA" class="button hidden tooltip"><a href="./index.html" style="font-size: 24px"><i class="fas fa-home"></i></a>
             <span class="tooltiptext">HOME</span>
         </button>
-        <button id="buttonB" class="button hidden tooltip"><a href="/achievements&certificates.html" style="font-size: 24px"><i class="fas fa-trophy"></i></a>
+        <button id="buttonB" class="button hidden tooltip"><a href="./achievements&certificates.html" style="font-size: 24px"><i class="fas fa-trophy"></i></a>
             <span class="tooltiptext">ACHIEVEMENTS</span>
         </button>
         <button id="buttonC" class="button hidden tooltip"><a href="#" style="font-size: 24px"><i class="fas fa-file-alt"></i></a>
             <span class="tooltiptext">RESUME</span>
         </button>
-        <button id="buttonD" class="button hidden tooltip"><a href="/Projects.html" style="font-size: 24px"><i class="fas fa-briefcase"></i></a>
+        <button id="buttonD" class="button hidden tooltip"><a href="./Projects.html" style="font-size: 24px"><i class="fas fa-briefcase"></i></a>
             <span class="tooltiptext">PROJECTS</span>
         </button>
-        <button id="buttonE" class="button hidden tooltip"><a href="/index.html#contact" style="font-size: 24px"><i class="fas fa-user"></i></a>
+        <button id="buttonE" class="button hidden tooltip"><a href="./index.html#contact" style="font-size: 24px"><i class="fas fa-user"></i></a>
             <span class="tooltiptext">CONTACT</span>
         </button>
     </div>
     </div>
-      <script src="/js/main.js"></script>
+      <script src="./js/main.js"></script>
     </body>
 </html>
