--- a/achievements&certificates.html
+++ b/achievements&certificates.html
@@ -53,7 +53,7 @@
                 alt="Certification 5"
                 onclick="showImage(4)"/>  
               <img 
-              src="/img/certificates/CSS.jpg" 
+              src="./img/certificates/CSS.jpg" 
               alt="Certification 6" 
               onclick="showImage(5)"
               />
@@ -75,54 +75,54 @@
 >
                   <img src=".//img/certificates/introduction to r.png" alt="Certification 13" onclick="showImage(12)"
 >
-                  <img src="/img/certificates/introduction to soft skills.png" alt="Certification 14" onclick="showImage(13)"
+                  <img src="./img/certificates/introduction to soft skills.png" alt="Certification 14" onclick="showImage(13)"
 >
-                  <img src="/img/certificates/Java Servlets and JSP.jpg" alt="Certification 15" onclick="showImage(14)"
+                  <img src="./img/certificates/Java Servlets and JSP.jpg" alt="Certification 15" onclick="showImage(14)"
 >
-                  <img src="/img/certificates/Python 3.jpg" alt="Certification 16" onclick="showImage(15)"
+                  <img src="./img/certificates/Python 3.jpg" alt="Certification 16" onclick="showImage(15)"
 >
-                  <img src="/img/certificates/rdbms.jpg" alt="Certification 17" onclick="showImage(16)"
+                  <img src="./img/certificates/rdbms.jpg" alt="Certification 17" onclick="showImage(16)"
 >
-                  <img src="/img/certificates/Resume building.png" alt="Certification 18" onclick="showImage(17)"
+                  <img src="./img/certificates/Resume building.png" alt="Certification 18" onclick="showImage(17)"
 >
-                  <img src="/img/certificates/sql.jpg" alt="Certification 19" onclick="showImage(18)"
+                  <img src="./img/certificates/sql.jpg" alt="Certification 19" onclick="showImage(18)"
 >            
             </div>
             <div class="carousel">
               <img
-                src="/img/certificates/Applying AI.png"
+                src="./img/certificates/Applying AI.png"
                 alt="Certification 1"
                 class="active"
               />
               <img
-                src="/img/certificates/Building a Website.jpg"
+                src="./img/certificates/Building a Website.jpg"
                 alt="Certification 2"
               />
               <img
-                src="/img/certificates/ChatGPT.jpg"
+                src="./img/certificates/ChatGPT.jpg"
                 alt="Certification 3"
               />
               <img
-                src="/img/certificates/communication skills.png"
+                src="./img/certificates/communication skills.png"
                 alt="Certification 4"
               />
               <img
-                src="/img/certificates/crash course on soft skills for interviews.png"
+                src="./img/certificates/crash course on soft skills for interviews.png"
                 alt="Certification 5"
-              />  <img src="/img/certificates/CSS.jpg" alt="Certification 6">
-                  <img src="/img/certificates/Data Science Foundations.png" alt="Certification 7">
-                  <img src="/img/certificates/Git.jpg" alt="Certification 8">
-                  <img src="/img/certificates/html.jpg" alt="Certification 9">
-                  <img src="/img/certificates/HTML Advanced.jpg" alt="Certification 10">
-                  <img src="/img/certificates/interest calculator using Html,Css & Js.png" alt="Certification 11">
-                  <img src="/img/certificates/interrview skills.png" alt="Certification 12">
-                  <img src="/img/certificates/introduction to r.png" alt="Certification 13">
-                  <img src="/img/certificates/introduction to soft skills.png" alt="Certification 14">
-                  <img src="/img/certificates/Java Servlets and JSP.jpg" alt="Certification 15">
-                  <img src="/img/certificates/Python 3.jpg" alt="Certification 16">
-                  <img src="/img/certificates/rdbms.jpg" alt="Certification 17">
-                  <img src="/img/certificates/Resume building.png" alt="Certification 18">
-                  <img src="/img/certificates/sql.jpg" alt="Certification 19">        
+              />  <img src="./img/certificates/CSS.jpg" alt="Certification 6">
+                  <img src="./img/certificates/Data Science Foundations.png" alt="Certification 7">
+                  <img src="./img/certificates/Git.jpg" alt="Certification 8">
+                  <img src="./img/certificates/html.jpg" alt="Certification 9">
+                  <img src="./img/certificates/HTML Advanced.jpg" alt="Certification 10">
+                  <img src="./img/certificates/interest calculator using Html,Css & Js.png" alt="Certification 11">
+                  <img src="./img/certificates/interrview skills.png" alt="Certification 12">
+                  <img src="./img/certificates/introduction to r.png" alt="Certification 13">
+                  <img src="./img/certificates/introduction to soft skills.png" alt="Certification 14">
+                  <img src="./img/certificates/Java Servlets and JSP.jpg" alt="Certification 15">
+                  <img src="./img/certificates/Python 3.jpg" alt="Certification 16">
+                  <img src="./img/certificates/rdbms.jpg" alt="Certification 17">
+                  <img src="./img/certificates/Resume building.png" alt="Certification 18">
+                  <img src="./img/certificates/sql.jpg" alt="Certification 19">        
               <div class="text"></div>
               <div class="carousel-buttons">
                 <button class="button1" onclick="prevImage()"><i class="fas fa-arrow-left"></i></button>
