--- a/Projects.html
+++ b/Projects.html
@@ -6,7 +6,7 @@
     <title>VIJJI JOVARDHAN</title>
     <link rel="stylesheet" href="./css/projects.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="./img/profile.jpg" type="image/png">
+    <link rel="icon" style="border-radius: 50%;" href="./img/profile.jpg" type="image/png">
 
     </head>
     
