--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <title>VIJJI JOVARDHAN</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<<<<<<< HEAD
-    <link rel="icon" href="./img/profile.jpg" type="image/png">
-
-=======
-    <link rel="icon" href="/img/profile.jpg" type="image/png">
->>>>>>> 23011a21bd5edb01079d9319aea361b9ad8b8e97
+    <link rel="icon" style="border-radius: 50%;" href="./img/profile.jpg" type="image/png">
     </head>
     
     <body>
