--- a/Projects.html
+++ b/Projects.html
@@ -52,7 +52,7 @@
 
         <div class="project-content">
             <h3>Video Demonstration</h3>
-            <p>Watch the video below to see the bot in action, demonstrating how it interacts with users and fetches the NASA Image of the Day.</p>
+            <p>Watch the video above to see the bot in action, demonstrating how it interacts with users and fetches the NASA Image of the Day.</p>
         </div>
     </div>
 
