--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     
     <body>
       <fieldset class="container">
-        <div class="resume-head"><h1>RESUME</h1><button id="colorButton"><a href="/img/VIJJI JOVARDHAN411205.docx" download="/img/VIJJI JOVARDHAN411205.docx" class="download-btn">Download</a></button></div>
+        <div class="resume-head"><h1>RESUME</h1><button id="colorButton"><a href="./img/VIJJI JOVARDHAN411205.docx" download="/img/VIJJI JOVARDHAN411205.docx" class="download-btn">Download</a></button></div>
         <!-- Header Section -->
         <div class="header">
           <div style="display: grid;align-items: center;justify-content:center;">
