--- a/achievements&certificates.html
+++ b/achievements&certificates.html
@@ -157,5 +157,10 @@
       </div>
       <script src="./js/main.js"></script>
       <script src="./js/achievements.js"></script>
+      <script>
+        document.addEventListener('contextmenu', function(event) {
+        event.preventDefault();
+    });
+  </script>
     </body>
 </html>
