--- a/Projects.html
+++ b/Projects.html
@@ -79,5 +79,10 @@
     </div>
       </div>
       <script src="./js/main.js"></script>
+      <script>
+        document.addEventListener('contextmenu', function(event) {
+        event.preventDefault();
+    });
+  </script>
     </body>
 </html>
