--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
           <p style="padding-top:10px;">I am an aspiring web developer currently pursuing a Bachelor of Science in Data Science from K.B.N. College, Vijayawada. I'm passionate about developing intuitive web applications and enhancing my skills in various programming languages and frameworks. My career goal is to become a proficient full-stack developer and contribute to impactful projects.</p>
         </div>
 
+        <!-- Experience Section -->
+        <div class="section">
+            <h2>Experience</h2>
+            <p><strong>Raaj Associates - Wholesale Medical Shop</strong></p>
+            <p>Part-time Billing and Inventory Assistant</p>
+            <p>May 2019 - November 2020</p>
+            <p>Part-time role as a Billing and Inventory Assistant, responsible for verifying bills, managing inventory, and handling customer transactions. Developed skills in billing, inventory management, and customer service.</p>
+            <br>
+            <p><strong>Benz Electric and Plumbing Works</strong></p>
+            <p>Full-time Assistant - Construction Services</p>
+            <p>May 2021 - May 2022</p>
+            <p>Part-time role as a Billing and Inventory Assistant, responsible for verifying bills, managing inventory, and handling customer transactions. Developed skills in billing, inventory management, and customer service.</p>
+        </div>
+
         <!-- Skills Section -->
         <div class="section">
         <h2>Skills</h2>
