--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     
     <body>
       <fieldset class="container">
-        <div class="resume-head"><h1>RESUME</h1><button id="colorButton"><a href="./img/VIJJI JOVARDHAN411205.docx" download="/img/VIJJI JOVARDHAN411205.docx" class="download-btn">Download</a></button></div>
+        <div class="resume-head"><h1>RESUME</h1><button id="colorButton"><a href="./img/VIJJI_JOVARDHAN411205NEW.docx" download="/img/VIJJI_JOVARDHAN411205NEW.docx" class="download-btn">Download</a></button></div>
         <!-- Header Section -->
         <div class="header">
           <div style="display: grid;align-items: center;justify-content:center;">
@@ -32,6 +32,20 @@
             <p>Seeking a challenging and responsible position in an organization that provides an opportunity to utilize and expose my skills towards the development of the organization as well as growth in my career.</p>
         </div>
 
+        <!-- Experience Section -->
+        <div class="section">
+            <h2>Experience</h2>
+            <p><strong>Raaj Associates - Wholesale Medical Shop</strong></p>
+            <p>Part-time Billing and Inventory Assistant</p>
+            <p>May 2019 - November 2020</p>
+            <p>Part-time role as a Billing and Inventory Assistant, responsible for verifying bills, managing inventory, and handling customer transactions. Developed skills in billing, inventory management, and customer service.</p>
+            <br>
+            <p><strong>Benz Electric and Plumbing Works</strong></p>
+            <p>Full-time Assistant - Construction Services</p>
+            <p>May 2021 - May 2022</p>
+            <p>Part-time role as a Billing and Inventory Assistant, responsible for verifying bills, managing inventory, and handling customer transactions. Developed skills in billing, inventory management, and customer service.</p>
+        </div>
+
         <!-- Exposure Section -->
         <div class="section">
             <h2>Exposure</h2>
@@ -39,7 +53,7 @@
             <p>Duration: 180 hours</p>
             <p>Team Size: 6 Members</p>
             <p>Gained experience in teaching basic computer skills to newbies. As the team leader, organized and directed lessons on fundamental concepts such as hardware, software, and internet use. Focused on practical, easy-to-understand instruction to build their confidence and digital literacy.</p>
-            
+            <br>
             <p><strong>Prompt Engineering</strong></p>
             <p>Project Name: AARUHI BOT</p>
             <p>Duration: 200 hours</p>
